--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,9 +5,11 @@ spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 
+
 spring.jpa.hibernate.ddl-auto=update
-
-
 spring.jpa.defer-datasource-initialization=true
-spring.sql.init.mode=never
 
+spring.sql.init.mode=never
+spring.sql.init.data-locations=classpath:/data.sql
+
+spring.jpa.open-in-view=false
