Add pagination, sorting and page size controls for products

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,15 +1,11 @@
 spring.application.name=backend
 server.port=8080
 
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
-
-
+# no hard requirement for DB_URL vars; Docker env SPRING_DATASOURCE_* will override
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.defer-datasource-initialization=true
 
-spring.sql.init.mode=never
+spring.sql.init.mode=always
 spring.sql.init.data-locations=classpath:/data.sql
 
 spring.jpa.open-in-view=false
